2010-05-25  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GStreamer] Apple trailers not playing
        https://bugs.webkit.org/show_bug.cgi?id=37390

        Set the AppleTrailer User-Agent workaround after
        FrameLoader::addExtraFieldsToSubresourceRequest has been called
        because that method sets the global User-Agent.

        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        (webKitWebSrcStart):

Canonical link: https://commits.webkit.org/51270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60219 268f45cc-cd09-0410-ab3c-d52691b4dbfc